fixing overflow hidden

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -25,11 +25,11 @@ body
 {       
     background-color:yellow;
     position: fixed; 
-    top: 45px; /*Set top value to HeightOfTopFrameDiv*/
+    top: 45px; /*Set top value to headerBox*/
     left: 0;
     right: 0;
-    bottom: 20px; /*Set bottom value to HeightOfBottomFrameDiv*/
-    overflow: auto; 
+    bottom: 20px; /*Set bottom value to footerBox*/
+    overflow: hidden; 
 }
 
 #footerBox
@@ -70,6 +70,8 @@ body
 }
 
 #copyright
-{   
-    margin-right:100px;
+{
+    right: 50px;
+    position: absolute;
+    font-size: 11px;
 }
